--- a/index.html
+++ b/index.html
@@ -32,4 +32,5 @@
     -->
   </body>
   <script type="module" src="/src/index.jsx"></script>
+  <script src="html5-qrcode.min.js"></script>
 </html>
