--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
     -->
   </body>
   
-  <script src="html5-qrcode.min.js"></script>
+  <!-- <script src="html5-qrcode.min.js"></script> -->
 </html>
